--- a/views/index.tt
+++ b/views/index.tt
@@ -1,123 +1,3 @@
-[% UNLESS graphs.size %]
-<p>No graphs are selected for display. Please use your
-<a href="[% url.page %]/account/graph/">account options</a> to add graphs to this page.</p>
-[% END %]
-
-[% FOREACH graph IN graphs %]
-    <h3>[% graph.dbrow.title %]</h3>
-    [% IF graph.dbrow.description %]<p>[% graph.dbrow.description %]</p>[% END %]
-    <div id="chartdiv[% graph.dbrow.id %]" style="height:400px;width:600px; "></div>
-    <p></p>
-[% END %]
-
-
-
-    <script type="text/javascript">
-        var jscode='[% FILTER remove('\n+') %]
-            [% FILTER replace('\'', '\\\'') %]
-[% FOREACH graph IN graphs %]
-    [% series = graph.series %]
-            $(document).ready(function(){
-                var ticks = [ ' [% graph.xlabels.join("','") %] ' ];
-                plot3 = $.jqplot(
-                    'chartdiv[% graph.dbrow.id %]',
-                    [
-                    [% FOREACH s IN series %]
-                        [
-                            [% IF graph.type == "donut" || graph.type == "pie" %]
-                                [% FOREACH datum IN s.data %]
-                                [
-                                    '[% graph.xlabels.${loop.index} %]', [% datum %]
-                                ]
-                                [% UNLESS loop.last %],[% END %]
-                                [% END %]
-                            [% ELSE %]
-                                [% s.data.join(',') %]
-                            [% END %]
-                        ]
-                        [% UNLESS loop.last %],[% END %]
-                    [% END %] ], {
-                        stackSeries: [% graph.stackseries %],
-                        [% IF graph.type == "bar" %]
-                            seriesDefaults:{
-                                renderer:$.jqplot.BarRenderer,
-                                rendererOptions: {
-                                    barMargin: 30
-                                },
-                                pointLabels: {
-                                    show: true
-                                }
-                            },
-                        [% ELSIF graph.type == "donut" %]
-                            seriesDefaults:{
-                                renderer:$.jqplot.DonutRenderer,
-                                rendererOptions: {
-                                    sliceMargin: 3,
-                                    showDataLabels: true,
-                                    dataLabels: 'value'
-                                }
-                            },
-                        [% ELSIF graph.type == "pie" %]
-                            seriesDefaults:{
-                                renderer:$.jqplot.PieRenderer,
-                                rendererOptions: {
-                                    showDataLabels: true,
-                                    dataLabels: 'value'
-                                }
-                            },
-                        [% END %]
-                        series:[
-                        [% FOREACH row IN series %]
-                            {
-                                showLabel: [% row.label.showlabel %],
-                                showLine: [% row.label.showline %],
-                                markerOptions: [% row.label.markeroptions %],
-                                color: '[% row.label.color %]',
-                                label: '[% row.label.label %]',
-                                pointLabels: {
-                                    labels:[
-                                    [% FOREACH point IN row.label.points %]
-                                        '[% point %]'
-                                        [% UNLESS loop.last %],[% END %]
-                                    [% END %]
-                                    ]
-                                }
-                            }
-                            [% UNLESS loop.last %],[% END %]
-                        [% END %]
-                        ],
-                        [% UNLESS graph.type == "donut" OR graph.type == "pie" %]
-                            axes: {
-                                xaxis: {
-                                    renderer: $.jqplot.CategoryAxisRenderer,
-                                    ticks: ticks
-                                },
-                                yaxis: {
-                                    padMin: 0
-                                }
-                            },
-                            axesDefaults: {
-                                tickRenderer: $.jqplot.CanvasAxisTickRenderer ,
-                                tickOptions: {
-                                  angle: -30,
-                                  fontSize: '10pt'
-                                }
-                            },
-                        [% END %]
-                        legend: {
-                            show: [% graph.showlegend %],
-                            location: 'e',
-                            placement: 'outside'
-                        }      
-                    }
-                );
-            });
-[% END %]
-            [% END %]
-        [% END %]';
-    </script>
-
-
-
-
+<h2>Welcome to the SCAP</h2>
+<p>Some example text</p>
 
