--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <!-- What a mess. The login screen only renders with IE8 mode, the graphs only with IE7 mode
              Please Microsoft, don't produce such rubbish. Just ditch IE forever and use an open source browser instead -->
-        [% IF page == "index" %]
+        [% IF page == "data" AND viewtype == "graph" %]
             <meta http-equiv="X-UA-Compatible" content="IE=7">
         [% ELSE %]
             <meta http-equiv="X-UA-Compatible" content="IE=8">
@@ -123,7 +123,7 @@
         [% IF page == "login" %]
             <script type="text/javascript" src="[% url.js %]/login.js"></script>
         [% END %]
-        [% IF page == "index" %]
+        [% IF page == "data" AND viewtype == "graph" %]
             <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="/js/excanvas.min.js"></script><![endif]-->
             <script language="javascript" type="text/javascript" src="[% url.js %]/jquery.jqplot.min.js"></script>
             <link rel="stylesheet" type="text/css" href="[% url.css %]/jquery.jqplot.min.css" />
