--- a/public/css/local.css
+++ b/public/css/local.css
@@ -7,12 +7,20 @@ a.normal {
     color: #222222;
 }
 
-div.circle {
+div.circ-large {
     width: 20px;
     height: 20px;
     border-radius: 10px;
     font-size: 20px;
     behavior: url(/js/PIE.htc);
+}
+
+div.circ-small {
+    border-radius: 50%;
+    width: 12px;
+    height: 12px; 
+    margin: 0px 5px 0px 10px;
+    display: inline-block;
 }
 
 .red {
