--- a/views/data_calendar.tt
+++ b/views/data_calendar.tt
@@ -1,22 +1,29 @@
-[% FOREACH color IN datecolors.pairs %]
-    <div class="circ-small [% color.value %]"></div>[% color.key %]
-[% END %]
-<div class="page-header">
-    <div class="pull-right form-inline">
-        <div class="btn-group">
-            <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
-            <button class="btn" data-calendar-nav="today">Today</button>
-            <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
-        </div>
-        <div class="btn-group">
-            <button class="btn btn-warning" data-calendar-view="year">Year</button>
-            <button class="btn btn-warning active" data-calendar-view="month">Month</button>
-            <button class="btn btn-warning" data-calendar-view="week">Week</button>
-            <button class="btn btn-warning" data-calendar-view="day">Day</button>
+<div class="row">
+    <div class="col-md-2">
+        <strong id="caltitle"></strong>
+    </div>
+    <div class="col-md-4">
+    [% FOREACH color IN datecolors.pairs %]
+        <div class="circ-small [% color.value %]"></div>[% color.key %]
+    [% END %]
+    </div>
+    <div class="col-md-6">
+        <div class="pull-right">
+            <div class="btn-group">
+                <button class="btn btn-primary" data-calendar-nav="prev"><< Prev</button>
+                <button class="btn" data-calendar-nav="today">Today</button>
+                <button class="btn btn-primary" data-calendar-nav="next">Next >></button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-warning" data-calendar-view="year">Year</button>
+                <button class="btn btn-warning active" data-calendar-view="month">Month</button>
+                <button class="btn btn-warning" data-calendar-view="week">Week</button>
+                <button class="btn btn-warning" data-calendar-view="day">Day</button>
+            </div>
         </div>
     </div>
-    <h4></h4>
 </div>
+
 <div id="calendar"></div>
 <p></p>
 
@@ -44,7 +51,7 @@
                                 });
                         },
                         onAfterViewLoad: function(view) {
-                              $('.page-header h4').text(this.getTitle());
+                              $('#caltitle').text(this.getTitle());
                               $('.btn-group button').removeClass('active');
                               $('button[data-calendar-view="' + view + '"]').addClass('active');
                         },
