--- a/views/data.tt
+++ b/views/data.tt
@@ -8,7 +8,7 @@
         <div class="col-md-8">
             <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        View type <span class="caret"></span>
+                        Display format <span class="caret"></span>
                 </button>
                 <ul id="menu_type" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="drop_type">
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="?viewtype=table">Table</a></li>
