--- a/views/view.tt
+++ b/views/view.tt
@@ -94,7 +94,7 @@
                         <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete this view? Deleting a view will also delete any graphs that use this view.</p>
+                        <p>Are you sure you want to delete this view?</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
