HTML encode field names in view edit

--- a/views/view.tt
+++ b/views/view.tt
@@ -23,7 +23,7 @@
                             [% IF ucolumns.grep("^$id\$").size %]checked[% END %]
                         >
                     </td>
-                    <td>[% column.name %]</td>
+                    <td>[% column.name | html_entity %]</td>
                 </tr>
                 [% END %]
             </table>
