--- a/views/edit.tt
+++ b/views/edit.tt
@@ -32,7 +32,7 @@
                 [% field = 'field' _ col.id %]
                 [% NEXT UNLESS record.$field.defined OR NOT approves %]
                 [% IF approves %]
-                    [% oldvalue = item_value(col, record.record) %]
+                    [% oldvalue = item_value(col, record.record) | html_entity %]
                 [% END %]
                 [% value = form_value(col, record) %]
                 [% IF record.current AND col.readonly AND NOT user.permissions.update_noneed_approval AND NOT user.permissions.approver %]
@@ -41,7 +41,7 @@
                     [% readonly = "" %]
                 [% END %]
                 <div class="form-group">
-                    [% label = col.name %]
+                    [% label = col.name | html_entity %]
                     [% UNLESS col.optional %][% label = label _ '*' %][% END %]
                 [% IF col.type == "enum" %]
                     <label for="[% col.id %]">
