--- a/views/data_calendar.tt
+++ b/views/data_calendar.tt
@@ -4,7 +4,7 @@
     </div>
     <div class="col-md-4">
     [% FOREACH color IN datecolors.pairs %]
-        <div class="circ-small [% color.value %]"></div>[% color.key %]
+        <div class="circ-small [% color.value %]"></div>[% color.key | html_entity%]
     [% END %]
     </div>
     <div class="col-md-6">
