--- a/views/edit.tt
+++ b/views/edit.tt
@@ -105,18 +105,20 @@
                     <label for="[% col.id %]">
                         [% label %][% IF oldvalue %] (previously &quot;[% oldvalue %]&quot;)[% END %]
                     </label>
-                    [% IF col.type == "date" || col.type == "daterange" %]
-                        [% class = "form-control datepicker" %]
-                    [% ELSE %]
-                        [% class = "form-control" %]
-                    [% END %]
                     [% IF col.type == "daterange" %]
-                        [% opts = 'data-date-multidate="2" data-date-multidate-separator=" to "' %]
+                        <div class="input-daterange datepicker" style="padding:0">
+                                <input type="text" name="[% field %]" class="form-control" style="width:48%; display:inline" value="[% value.from %]">
+                                <input type="text" name="[% field %]" class="form-control" style="width:48%; display:inline; float:right" value="[% value.to %]">
+                        </div>
                     [% ELSE %]
-                        [% opts = "" %]
+                        [% IF col.type == "date" %]
+                            [% class = "form-control datepicker" %]
+                        [% ELSE %]
+                            [% class = "form-control" %]
+                        [% END %]
+                        <input type="text" class="[% class %]" id="[% col.id %]"
+                            name="[% field %]" value="[% IF record %][% value %][% END %]" [% readonly %] >
                     [% END %]
-                    <input type="text" class="[% class %]" id="[% col.id %]"
-                        name="[% field %]" value="[% IF record %][% value %][% END %]" [% opts %] [% readonly %] >
                 [% END %]
                 </div>
             [% END %]
